@@ -13,6 +13,7 @@ Cacti CHANGELOG
 -issue#1503: Undefined function clearstatscache in DSSTATS
 -issue#1507: When saving graph settings from the graph page, the graph template id should not be included
 -issue#1510: New Graphs Undefined Variable $graph_template_name
+-issue#1543: Graph Preview appends header=false too many times
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
